# StarPulse

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml  sitecustomize.py
.github/workflows/: daily.yml
plans/: development-plan.md
plans/todo/: github-star-growth-detection.md
scripts/: import_daily_stars.py  retry_dingtalk.py  run_daily_pipeline.py
src/starpulse/: __init__.py  bigquery_daily.py  config.py  dates.py  dingtalk.py  github_metadata.py  llm_provider.py  pipeline.py  rankings.py  report_builder.py  storage.py
src/starpulse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
starpulse/: __init__.py
tests/: test_bigquery_daily.py  test_config.py  test_dates.py  test_dingtalk.py  test_github_metadata.py  test_llm_provider.py  test_pipeline.py  test_report_builder.py  test_run_daily_pipeline_script.py  test_storage.py
